<HypothesisNode/> - add sticky hypothesis nodes

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -241,3 +241,12 @@ body{
 .goal-username {
   padding: 0 10px;
 }
+
+
+.in-scope-hypotheses{
+  position: fixed;
+  top: 0; left: 0; right: 0;
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 300;
+}
