--- a/app/src/index.css
+++ b/app/src/index.css
@@ -63,13 +63,32 @@ body{
   }
 }
 
+/*______________________ PROOF-TREE: colors ______________________*/
+/* This would be really easy to achieve with opacities, however various nodes goalUsernames must *cover* tactic borders to make them look good, which means they must be solid-color. */
+.box{ background: rgba(132, 147, 171, 0.1); }
+.box > .goal-username{
+  background: color-mix(in srgb, rgba(132, 147, 171), white calc(80% - var(--level) * 7%));
+}
+/* We can also adjust node colors in the future */
+/* .hypothesis{
+  background: color-mix(in srgb, #a4dabc, rgba(132, 147, 171) calc(var(--level) * 7%)) !important;
+  border-color: color-mix(in srgb, rgb(124 211 158), rgba(132, 147, 171) calc(var(--level) * 7%)) !important;
+} */
+.box  { --level: 0;
+& .box{ --level: 1;
+& .box{ --level: 2;
+& .box{ --level: 3;
+& .box{ --level: 4;
+& .box{ --level: 5;
+& .box{ --level: 6;
+& .box{ --level: 7;
+& .box{ --level: 8;
+}}}}}}}}}
 /*______________________ PROOF-TREE: prettiness ______________________*/
 .box{
   font-size: 12px;
   border-radius: 2px;
   flex-grow: 1;
-  background: rgba(132, 147, 171, 0.1);
-
   & .box-insides{
     padding: 10px;
     padding-bottom: 0;
@@ -111,14 +130,9 @@ body{
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgba(147, 153, 162, 0.11);
     color: #9c9797;
-    border-bottom: 2px #e1e1e1 solid;
+    padding: 1px 10px;
   }
-  /* &:hover > .goal-username {
-    background: rgba(147, 153, 162, 0.3);
-    border-bottom: 2px solid #c5d0d6;
-  } */
 }
 .hypothesis, .goal, .tactic{
   padding: 5px 12px;
