css - make `sorry` tactic pretty

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -159,8 +159,8 @@ body{
   }
   &.-sorried{
     text-align: center;
-    background: #f2f1d9;
-    border-color: #d2ce59;
+    background: #f2ded94f;
+    background-image: url("data:image/svg+xml,%3csvg width='100%25' height='100%25' xmlns='http://www.w3.org/2000/svg'%3e%3crect width='100%25' height='100%25' fill='none' stroke='%23f0cac196' stroke-width='3' stroke-dasharray='4%2c 6' stroke-dashoffset='0' stroke-linecap='square'/%3e%3c/svg%3e");
   }
   &.-ellipsis{
     text-align: center;
