--- a/app/src/index.css
+++ b/app/src/index.css
@@ -113,11 +113,10 @@ body{
 
   & .goal-username{
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+    text-align: center;
     color: #9c9797;
-    padding: 1px 10px;
+    padding: 0 10px;
+    padding-bottom: 1px;
   }
 }
 .hypothesis, .goal, .tactic{
@@ -252,6 +251,16 @@ table.hypothesis-table + .goals{
   }
 }
 
+/*______________________ PROOF-TREE: fixed hypotheses ______________________*/
+
+.in-scope-hypotheses{
+  position: fixed;
+  top: 0; left: 0; right: 0;
+  display: flex;
+  flex-wrap: wrap;
+  z-index: 300;
+}
+
 /*______________________ MUI: error toast colors ______________________*/
 .MuiSnackbar-root .MuiSnackbarContent-root {
   background-color: white;
@@ -277,20 +286,4 @@ table.hypothesis-table + .goals{
 }
 .-hint:hover pre{
   display: block;
-}
-
-
-
-/* new styles for `collapsed` state */
-.goal-username {
-  padding: 0 10px;
-}
-
-
-.in-scope-hypotheses{
-  position: fixed;
-  top: 0; left: 0; right: 0;
-  display: flex;
-  flex-wrap: wrap;
-  z-index: 300;
 }
