--- a/app/src/index.css
+++ b/app/src/index.css
@@ -131,7 +131,10 @@ body{
   /* We need this to make sure <goal>s and <hyp>s stay on top of <tactic>s */
   position: relative;
   /* We need this to make sure <goal>s and <hyp>s stay on top of arrows */
-  z-index: 10;
+  z-index: 1;
+}
+.goal{
+  z-index: 0 !important;
 }
 .tactic{
   margin-top: -2px; margin-bottom: -2px;
@@ -259,7 +262,7 @@ table.hypothesis-table + .goals{
     min-width: 100%;
   }
   & .tactic{
-    width: 200px;
+    max-width: 200px;
     min-width: 100%;
   }
 }
