<ContextMenu/> - add zoom in/zoom out shortcuts

--- a/app/src/index.css
+++ b/app/src/index.css
@@ -291,7 +291,19 @@ table.hypothesis-table + .goals{
 .MuiMenuItem-root{
   font-size: 14px !important;
   min-height: 0 !important;
-  padding-right: 0;
+  padding-right: 12px !important;
+  justify-content: space-between !important;
+
+  & .shortcut{
+    color: grey;
+    width: 38px;
+    background: #f3f5f7;
+    padding: 0 6px;
+    font-weight: bold;
+    border-radius: 3px;
+    font-size: 13px;
+    font-family: monospace;
+  }
 }
 
 .MuiSwitch-root{
